fix build for uploads